test/experiments/errors/errorTypes/undefinedVariable.js
/* eslint-disable */

if (true) {
  thisThingIsNotDefinedAndWillThereforeBreakDuringScriptParsing();
}
